<resources>
    <string name="app_name">STB Patient Logger</string>
    <string name="message_write_error">Error Writing Message</string>
    <string name="message_write_success">Successfully written to STB</string>
    <string name="message_write_progress">Writing to STB..</string>
    <string name="message_tag_detected">STB Detected</string>
    <string name="message_read_tag">Read from STB</string>
    <string name="message_write_tag">Write to STB</string>
    <string name="message_tap_tag">Touch your device to the STB</string>
    <string name="message_clear">Clear</string>
    <string name="hint_message_responder_id">Responder ID</string>
    <string name="hint_message_first_name">Patient First Name</string>
    <string name="hint_message_last_name">Patient Last Name</string>
    <string name="hint_message_dob">DOB</string>
    <string name="hint_message_triage_level">Patient Triage Level</string>
    <string name="location">Location</string>
    <string-array name="responder_level_array">
        <item>Green</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
    <string name="Option1">Green</string>
    <string name="Option2">Yellow</string>
    <string name="Option3">Red</string>
    <string name="hint_message_chief_complaint">Chief Complaint</string>
    <string name="give_location_permission">Give Location Permissions?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="location_unavailable">Location Unavailable</string>
    <string name="location_permission_granted">Location Permissions Granted</string>
    <string name="location_permission_denied">Location Permissions Denied</string>
</resources>
