<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        tools:context="com.slackpack.nfc.MainActivity">

        <EditText
            android:id="@+id/et_responder_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_message_responder_id"/>

        <TextView
            android:id="@+id/tv_responder_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_responder_id"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="5dp"
            android:text="@string/hint_message_triage_level"/>


        <Spinner
            android:id="@+id/spinner_responder_level"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_responder_level"
            android:spinnerMode="dialog"
            android:prompt="@string/hint_message_triage_level"/>

        <!--
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_responder_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_responder_level"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Option1"
                android:checked="true"/>
            <RadioButton android:id="@+id/radio_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Option2" />
        </RadioGroup>
        -->

        <EditText
            android:id="@+id/et_patient_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_responder_level"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:inputType="textCapSentences"
            android:hint="@string/hint_message_first_name"/>

        <EditText
            android:id="@+id/et_patient_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_patient_first_name"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:inputType="textCapSentences"
            android:hint="@string/hint_message_last_name"/>

        <EditText
            android:id="@+id/et_patient_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_patient_last_name"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/hint_message_dob"/>

        <EditText
            android:id="@+id/et_location"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_patient_dob"
            android:layout_marginTop="16dp"
            android:hint="Location"/>

        <Button
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_location"
            android:layout_marginTop="16dp"
            android:hint="Get Location"/>

        <EditText
            android:id="@+id/et_patient_chief_complaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_location"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:maxLines="10"
            android:inputType="textMultiLine"
            android:hint="Chief Complaint" />

        <Button
            android:id="@+id/btn_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_patient_chief_complaint"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/message_write_tag"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/btn_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_write"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/message_read_tag"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </RelativeLayout>
</ScrollView>
